# mpd-dbcreate

./: AUTHORS  BUILD_DEPENDENCIES.md  README.md  meson.build  meson_options.txt
doc/: conf.py  index.rst  meson.build  mpd-dbcreate.1.rst
src/: Ack.hxx  ChannelMode.hxx  DbMain.cxx  IdleFlags.hxx  Instance.cxx  Instance.hxx  Main.cxx  Partition.cxx  Partition.hxx  PlaylistFile.cxx  PlaylistPrint.cxx  RangeArg.hxx  StatsStub.cxx  StubFunctions.cxx
src/db/: Selection.hxx  meson.build
src/db/plugins/: meson.build
src/db/update/: FilteredSongUpdate.cxx  InotifyQueue.cxx  Service.cxx
src/decoder/plugins/: DvdaIsoDecoderPlugin.cxx  SacdIsoDecoderPlugin.cxx
src/encoder/: Configured.hxx  EncoderInterface.hxx  EncoderList.hxx  EncoderPlugin.hxx  Features.h
src/encoder/plugins/: WaveEncoderPlugin.cxx  WaveEncoderPlugin.hxx
src/filter/: Factory.hxx  Filter.cxx  Filter.hxx  LoadChain.hxx  Observer.hxx  Prepared.hxx  meson.build
src/filter/plugins/: AutoConvertFilterPlugin.hxx  ConvertFilterPlugin.hxx  NormalizeFilterPlugin.hxx  ReplayGainFilterPlugin.hxx  TwoFilters.hxx  VolumeFilterPlugin.hxx
src/input/: Registry.cxx
src/input/plugins/: meson.build
src/lib/dvdaiso/: meson.build
src/lib/dvdaiso/udf/: dvd_udf.cpp
src/lib/sacdiso/: meson.build
src/lib/upnp/: ClientInit.cxx
src/mixer/plugins/: meson.build
src/net/: meson.build
src/output/: meson.build
src/output/plugins/: meson.build
src/queue/: PlaylistEdit.cxx  Selection.hxx
src/sticker/: Database.hxx  SongSticker.hxx
src/storage/: Registry.cxx
src/storage/plugins/: meson.build
src/system/linux/: openat2.h
test/: meson.build
